; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_chain.c_CRYPT_FindCertInStore.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_chain.c_CRYPT_FindCertInStore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_9__ = type { i32, i32* }

@CERT_HASH_PROP_ID = common dso_local global i32 0, align 4
@CERT_FIND_SHA1_HASH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_8__* (i32, %struct.TYPE_8__*)* @CRYPT_FindCertInStore to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_8__* @CRYPT_FindCertInStore(i32 %0, %struct.TYPE_8__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_8__*, align 8
  %5 = alloca %struct.TYPE_8__*, align 8
  %6 = alloca [20 x i32], align 16
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_9__, align 8
  store i32 %0, i32* %3, align 4
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %4, align 8
  store %struct.TYPE_8__* null, %struct.TYPE_8__** %5, align 8
  store i32 80, i32* %7, align 4
  %9 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %10 = load i32, i32* @CERT_HASH_PROP_ID, align 4
  %11 = getelementptr inbounds [20 x i32], [20 x i32]* %6, i64 0, i64 0
  %12 = call i64 @CertGetCertificateContextProperty(%struct.TYPE_8__* %9, i32 %10, i32* %11, i32* %7)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %24

14:                                               ; preds = %2
  %15 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %8, i32 0, i32 0
  store i32 80, i32* %15, align 8
  %16 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %8, i32 0, i32 1
  %17 = getelementptr inbounds [20 x i32], [20 x i32]* %6, i64 0, i64 0
  store i32* %17, i32** %16, align 8
  %18 = load i32, i32* %3, align 4
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @CERT_FIND_SHA1_HASH, align 4
  %23 = call %struct.TYPE_8__* @CertFindCertificateInStore(i32 %18, i32 %21, i32 0, i32 %22, %struct.TYPE_9__* %8, i32* null)
  store %struct.TYPE_8__* %23, %struct.TYPE_8__** %5, align 8
  br label %24

24:                                               ; preds = %14, %2
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  ret %struct.TYPE_8__* %25
}

declare dso_local i64 @CertGetCertificateContextProperty(%struct.TYPE_8__*, i32, i32*, i32*) #1

declare dso_local %struct.TYPE_8__* @CertFindCertificateInStore(i32, i32, i32, i32, %struct.TYPE_9__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
